--- a/localisation/english/09_events_l_english.yml
+++ b/localisation/english/09_events_l_english.yml
@@ -187,6 +187,12 @@
  
  
  #########################################
+ kor_news.1000.t:0 "한국 통일"
+ kor_news.1000.desc:0 "대한민국과 조선민주주의인민공화국 간의 모든 외교적 합의는 물거품으로 돌아갔었고, 양국은 군사적 충돌을 통해 한반도의 패권을 두고서 격돌하였습니다. 대한민국 국군이 휴전선을 넘어 진격하였고, 조선군은 이를 저지하려 하였으나 역부족이었습니다.\n\n조선의 공식 수도인 평양이 함락되었고, 오늘 한반도 북부에 대한 통제권을 대한민국 정부가 확보하였다고 선언하였습니다. 한국의 주도 하에 한반도에 평화가 찾아왔습니다."
+ kor_news.1000.a:0 "중대한 발전이군."
+ kor_news.1000.b:0 "대한민국 만세!"
+ kor_news.1000.c:0 "대한민국 만세!"
+ #########################################
  
  kor_world.1.t:0 "[From.GetNameDefCap]에서 온 친선 조약"
  kor_world.1.d:0 "오늘 [From.GetNameDefCap]에서 우리와 친선관계와 불가침조약을 요청했습니다. 어떻게 할까요?"
