--- a/localisation/english/09_events_l_english.yml
+++ b/localisation/english/09_events_l_english.yml
@@ -256,15 +256,15 @@
  kpa.1.a:0 "공산주의자놈들을 조선에서 몰아내자!!"
  
  core_PRK:0 "하나된 한국"
- KOR_coring_in_811:0 "대한민국 황해도 수립"
- KOR_coring_in_814:0 "대한민국 강원도 통합"
- KOR_coring_in_812:0 "대한민국 함경남도 수립"
- KOR_coring_in_527:0 "대한민국 평안남도 수립"
- KOR_coring_in_822:0 "대한민국 평안북도 수립"
- KOR_coring_in_816:0 "대한민국 자강도 수립"
- KOR_coring_in_815:0 "대한민국 량강도 수립"
- KOR_coring_in_820:0 "대한민국 함경북도 수립"
- KOR_coring_in_818:0 "대한민국 평양직할시"
+ KOR_coring_in_hwanghae:0 "대한민국 황해도 수립"
+ KOR_coring_in_gangwonbuk:0 "대한민국 강원도 통합"
+ KOR_coring_in_hamnam:0 "대한민국 함경남도 수립"
+ KOR_coring_in_pyongnam:0 "대한민국 평안남도 수립"
+ KOR_coring_in_pyonbuk:0 "대한민국 평안북도 수립"
+ KOR_coring_in_jagang:0 "대한민국 자강도 수립"
+ KOR_coring_in_yanggang:0 "대한민국 양강도 수립"
+ KOR_coring_in_hambuk:0 "대한민국 함경북도 수립"
+ KOR_coring_in_pyongyang:0 "대한민국 평양직할시"
  
  core_HWAN:0 "지구 연방 결성"
 
