--- a/localisation/english/replace/TSK_state_l_english.yml
+++ b/localisation/english/replace/TSK_state_l_english.yml
@@ -1,19 +1,27 @@
 ﻿l_english:
+ STATE_GYEONGGI:0 "경기도"
  STATE_SEOUL:0 "서울"
- STATE_JEOLLA:0 "전라"
- STATE_GYUNGSANG:0 "경상"
- STATE_GANGWON:0 "강원"
- STATE_HWANGHAE:0 "황해"
- STATE_HAMNAM:0 "함경남"
- STATE_HAMBUK:0 "함경북"
+ STATE_JEONBUK:0 "전라북도"
+ STATE_JEONNAM:0 "전라남도"
+ STATE_GYUNGBUK:0 "경상북도"
+ STATE_GYUNGNAM:0 "경상남도"
+ STATE_GANGWON:0 "강원도"
+ STATE_CHUNGBUK:0 "충청북도"
+ STATE_CHUNGNAM:0 "충청남도"
  STATE_JEJU:0 "제주"
- STATE_GANGWONBUK:0 "강원북"
- STATE_RYANGGANG:0 "양강"
- STATE_JAGANG:0 "자강"
- STATE_CHUNGCHEONG:0 "충청"
  STATE_ULLENG:0 "울릉"
- STATE_PYONGBUK:0 "평안북"
  STATE_PYEONGTAEK:0 "평택"
+ 
+ STATE_GANGWONBUK:0 "강원도"
+ STATE_HWANGBUK:0 "황해북도"
+ STATE_HWANGNAM:0 "황해남도"
+ STATE_KAESUNG:0 "개성"
+ STATE_HAMNAM:0 "함경남도"
+ STATE_HAMBUK:0 "함경북도"
+ STATE_PYONGBUK:0 "평안북도"
+ STATE_PYONGNAM:0 "평안남도"
  STATE_PYONGYANG:0 "평양"
+ STATE_RYANGGANG:0 "양강도"
+ STATE_JAGANG:0 "자강도"
  
  STATE_TSUSHIMA:0 "쓰시마"
