--- a/localisation/english/09_events_l_english.yml
+++ b/localisation/english/09_events_l_english.yml
@@ -243,12 +243,101 @@
  KOR_southen_china_fenhal_desc:0 ""
  KOR_taiwan_china_fenhal:0 "중화민국을 대만섬으로"
  KOR_southen_china_fenhal_desc:0 ""
+ name_of_country:0 "국명 확립"
+ south_china_republic:0 "남중국이 분할되었다."
+ north_china_republic:0 "북중국이 분할되었다."
+ manchu_china_republic:0 "만주가 분할되었다."
+ neimenggu_china_republic:0 "내몽고가 분할되었다."
+ taiwan_china_republic:0 "대만이 분할되었다."
  
  
  is_ruling_manchuria_tt:0 "만주를 통제하는 중이다."
  is_ruling_neimenggu_tt:0 "내몽골을 통제하는 중이다."
  is_ruling_china_north_tt:0 "중국 북부를 통제하는 중이다."
  is_ruling_china_south_tt:0 "중국 남부를 통제하는 중이다."
+ is_ruling_china_taiwan_tt:0 "중국 대만섬을 통제하는 중이다."
+ 
+ MAN_republic:0 "만주 자치주"
+ MAN_republic_DEF:0 "만주 자치주"
+ MAN_republic_ADJ:0 "만주"
+ MEN_republic:0 "몽골 공화국"
+ MEN_republic_DEF:0 "몽골 공화국"
+ MEN_republic_ADJ:0 "몽골"
+ SHX_republic:0 "중화민국"
+ SHX_republic_DEF:0 "중화민국"
+ SHX_republic_ADJ:0 "북중국"
+ GXC_republic:0 "중화공화국"
+ GXC_republic_DEF:0 "중화공화국"
+ GXC_republic_ADJ:0 "남중국"
+ TAI_republic:0 "대만"
+ TAI_republic_DEF:0 "대만"
+ TAI_republic_ADJ:0 "대만"
+ 
+ MEN_republic_fascism:0 "몽골국"
+ MEN_republic_fascism_DEF:0 "몽골국"
+ MEN_republic_fascism_ADJ:0 "몽골국"
+ MEN_republic_democratic:0 "몽골"
+ MEN_republic_democratic_DEF:0 "몽골 공화국"
+ MEN_republic_democratic_ADJ:0 "몽골"
+ MEN_republic_neutrality:0 "몽골 공화국"
+ MEN_republic_neutrality_DEF:0 "몽골 공화국"
+ MEN_republic_neutrality_ADJ:0 "몽골"
+ MEN_republic_communism:0 몽골 사회주의 인민국"
+ MEN_republic_communism_DEF:0 "몽골 사회주의 인민국"
+ MEN_republic_communism_ADJ:0 "몽골"
+ 
+ 
+ MAN_republic_of_china_fascism:0 "만주 제국"
+ MAN_republic_of_china_fascism_DEF:0 "만주 제국"
+ MAN_republic_of_china_fascism_ADJ:0 "만주"
+ MAN_republic_of_china_democratic:0 "만주 공화국"
+ MAN_republic_of_china_democratic_DEF:0 "만주 공화국"
+ MAN_republic_of_china_democratic_ADJ:0 "만주"
+ MAN_republic_of_china_neutrality:0 "만주 공화국"
+ MAN_republic_of_china_neutrality_DEF:0 "만주 공화국"
+ MAN_republic_of_china_neutrality_ADJ:0 "만주"
+ MAN_republic_of_china_communism:0 "만주 사회주의 공화국"
+ MAN_republic_of_china_communism_DEF:0 "만주 사회주의 공화국"
+ MAN_republic_of_china_communism_ADJ:0 "만주"
+ 
+ SHX_republic_of_north_fascism:0 "대중화국"
+ SHX_republic_of_north_fascism_DEF:0 "대중화국"
+ SHX_republic_of_north_fascism_ADJ:0 "북중국"
+ SHX_republic_of_north_democratic:0 "중화 공화국"
+ SHX_republic_of_north_democratic_DEF:0 "중화 공화국"
+ SHX_republic_of_north_democratic_ADJ:0 "북중국"
+ SHX_republic_of_north_neutrality:0 "중화 연방국"
+ SHX_republic_of_north_neutrality_DEF:0 "중화 연방국"
+ SHX_republic_of_north_neutrality_ADJ:0 "북중국"
+ SHX_republic_of_north_communism:0 "중화 사회주의 연방국"
+ SHX_republic_of_north_communism_DEF:0 "중화 사회주의 연방국"
+ SHX_republic_of_north_communism_ADJ:0 "북중국"
+ 
+ GXC_republic_of_south_fascism:0 "중화민국 국민정부"
+ GXC_republic_of_south_fascism_DEF:0 "중화민국 국민정부"
+ GXC_republic_of_south_fascism_ADJ:0 "남중국"
+ GXC_republic_of_south_democratic:0 "중화민국"
+ GXC_republic_of_south_democratic_DEF:0 "중화민국"
+ GXC_republic_of_south_democratic_ADJ:0 "남중국"
+ GXC_republic_of_south_neutrality:0 "중화민국"
+ GXC_republic_of_south_neutrality_DEF:0 "중화민국"
+ GXC_republic_of_south_neutrality_ADJ:0 "남중국"
+ GXC_republic_of_south_communism:0 "중화인민공화국"
+ GXC_republic_of_south_communism_DEF:0 "중화인민공화국"
+ GXC_republic_of_south_communism_ADJ:0 "남중국"
+ 
+ TAI_taiwan_fascism:0 "대만 총독부"
+ TAI_taiwan_fascism_DEF:0 "대만 총독부"
+ TAI_taiwan_fascism_ADJ:0 "대만"
+ TAI_taiwan_democratic:0 "대만 총독부"
+ TAI_taiwan_democratic_DEF:0 "대만 총독부"
+ TAI_taiwan_democratic_ADJ:0 "대만"
+ TAI_taiwan_neutrality:0 "대만 왕국"
+ TAI_taiwan_neutrality_DEF:0 "대만 왕국"
+ TAI_taiwan_neutrality_ADJ:0 "대만"
+ TAI_taiwan_communism:0 "대만 총독부"
+ TAI_taiwan_communism_DEF:0 "대만 총독부"
+ TAI_taiwan_communism_ADJ:0 "대만"
  
  ###############북한 이벤트###################
  kpa.1.t:0 "김정은의 권위에 도전한 인민군 장교단"
