--- a/localisation/english/replace/09_kor_ideas_l_english.yml
+++ b/localisation/english/replace/09_kor_ideas_l_english.yml
@@ -210,7 +210,8 @@
  KOR_no_communism_crusader:0 "멸공북진"
  KOR_no_communism_crusader_desc:0 "6.25부터 이어져온 전쟁과 경쟁의 역사는 1936년으로 되돌아온 지금도 지속되고 있습니다."
  KOR_half_country:0 "분단된 국가"
- KOR_legacy_of_518:0 "민주화 운동의 유산"
+ KOR_legacy_of_518:0 "6월 항쟁의 유산"
+ KOR_legacy_of_518_desc:0 "5공화국의 압제는 박종철 학생의 사망과 호헌조치로 절정을 달하였고, 대한민국의 모든 시민들은 호헌 철폐를 외치며 거리로 나아가 자유와 민주주의를 목놓아 울부짖었습니다. \n\n전국민적, 외교적 압력에 이기지 못한 12.12 군사반란과 5.18 학살의 주범, 전두환은 결국 호헌조치를 철회할 것을 선언하였고, 곧 독재정권의 종식과 6공화국의 수립이 찾아왔습니다.\n\n수 십년이 지난 지금에도 그 경험은 생생히 사람들의 가슴 속에 내려앉아 있습니다. 한국인들은 독재를 스스로의 손으로 종식한 기억을 영원히 간직할 것입니다."
  KOR_modern_millitary:0 "미래의 군대"
  
  KOR_lee_factions_support:0 "이명박 계파의 지원"
