--- a/localisation/english/replace/09_kor_focus_l_english.yml
+++ b/localisation/english/replace/09_kor_focus_l_english.yml
@@ -287,11 +287,11 @@
  KOR_plan_hitler_desc:0 "유럽의 위협 알림"
  KOR_japans_accept_desc:0 ""한국의 21세기 기술력으로 압박을 하자 일본이 바들바들떨면서 '한번만 봐주세요'라고 외교특사를 보냈다고 뿌슝빠슝삐슝?""
  KOR_japans_cancle_desc:0 "쪽바리들이 거절했습니다. 전쟁이 다가옵니다..."
- KOR_japanese_industry_desc:0 "일본의 산업 침투"
- KOR_plan_of_fallen_sun_desc:0 "낙일 작전"
+ KOR_japanese_industry_desc:0 "21세기의 공업력은 겨우 20세기 동방 열강으로 자리매김 밖에 하지 못한 일본 제국 따위의 물품을 시장에서 완전히 추방시킬 정도입니다. 경제부터 잠식하고, 그 다음 목을 조릅시다."
+ KOR_plan_of_fallen_sun_desc:0 "떠오르는 태양의 제국은 더 이상 없습니다. 우리의 35여년의 치욕스러운 경험을 겪게 만든 장본인들에게 복수할 자격이 충분히 됩니다. 태양은 다시는 떠오르지 못할 것입니다."
  KOR_plan_napchi_yamato_desc:0 "아따 거 항모는 우리 항모랑께"
- KOR_chunhwa_desc:0 ""
- KOR_puppet_japan_desc:0 "제국주의 해체"
+ KOR_chunhwa_desc:0 "요즈음 합성 기술이 굉장히 발전하였습니다. 특히, 디시 인사이드의 합성-필수요소 갤러리의 유저들은 이러한 기술에 통달하였고, '영 좋지 않은 부위를 맞은 사람'과 '장군의 아들'을 수준 급으로 이용하고 있습니다. 이걸 전부 일본 엿먹이는데 사용해보면 어떨까요?"
+ KOR_puppet_japan_desc:0 "제국주의는 더 이상 필요가 없습니다. 일본 제국주의만요."
  KOR_this_is_japan_heemang_desc:0 "이게 일본이다 절망편 아니고?"
  KOR_plan_china_desc:0 "16개보다 더 많은 중국이 진짜 착한 중화입니다."
  KOR_6week_cut_desc:0 ""
