--- a/localisation/english/replace/kor_equipment_l_english.yml
+++ b/localisation/english/replace/kor_equipment_l_english.yml
@@ -767,7 +767,7 @@
  cv_m_1970_jet_cas_equipment:0 "1970년대 함재 근접항공지원기"
  cv_m_1980_jet_multirole_equipment:0 "1980년대 함재 멀티롤"
  KOR_cv_m_1990_jet_fighter_equipment:0 "F-14D 슈퍼톰캣"
- KOR_cv_m_1970_jet_cas_equipment:0 "A-7D 콜셰어 II"
+ KOR_cv_m_1970_jet_cas_equipment:0 "A-7D 콜세어 II"
  KOR_cv_m_1980_jet_multirole_equipment:0 "F/A-18 호넷"
  
  m_1970_jet_multirole_equipment:0 "1970년대 멀티롤"
