--- a/localisation/english/replace/TSK_victory_points_l_english.yml
+++ b/localisation/english/replace/TSK_victory_points_l_english.yml
@@ -4,6 +4,7 @@
  VICTORY_POINTS_11835:0 "신의주"
  VICTORY_POINTS_13378:0 "울산"
  VICTORY_POINTS_3981:0 "함흥"
+ VICTORY_POINTS_11770:0 "흥남"
  VICTORY_POINTS_1177:0 "제주"
  VICTORY_POINTS_848:0 "원산"
  VICTORY_POINTS_7121:0 "포항"
