잘 돌아간다

--- a/localisation/english/TSK_all_l_english.yml
+++ b/localisation/english/TSK_all_l_english.yml
@@ -1,3 +1,6 @@
 ﻿l_english:
  KOR_yi_emp_trait:0 "대한제국 황제"
  KPA_chinese_leaders_attack:0 "항미원조의 유산"
+ ROK_death_before_surrender:0 "항복할 바에 죽으리라!"
+ ROK_independent_officer:0 "독립군 장교"
+ ROK_offensive:0 "총공세"
