--- a/localisation/english/09_events_l_english.yml
+++ b/localisation/english/09_events_l_english.yml
@@ -285,7 +285,7 @@
  MEN_republic_neutrality:0 "몽골 공화국"
  MEN_republic_neutrality_DEF:0 "몽골 공화국"
  MEN_republic_neutrality_ADJ:0 "몽골"
- MEN_republic_communism:0 몽골 사회주의 인민국"
+ MEN_republic_communism:0 "몽골 사회주의 인민국"
  MEN_republic_communism_DEF:0 "몽골 사회주의 인민국"
  MEN_republic_communism_ADJ:0 "몽골"
  
