--- a/localisation/english/FoS_opening_l_english.yml
+++ b/localisation/english/FoS_opening_l_english.yml
@@ -39,7 +39,7 @@
  MEN_republic_democratic_DEF:0 "내몽골 공화국"
  MEN_republic_neutrality:0 "내몽골 공화국"
  MEN_republic_neutrality_DEF:0 "내몽골국 공화국"
- MEN_republic_communism:0 대몽골 사회주의 인민국"
+ MEN_republic_communism:0 "대몽골 사회주의 인민국"
  MEN_republic_communism_DEF:0 "대몽골 사회주의 인민국"
  MEN_republic_DEF:0 "내몽골"
  MEN_republic_ADJ:0 "내몽골"
@@ -87,7 +87,7 @@
  MAN_republic_democratic_DEF:0 "만주 공화국"
  MAN_republic_neutrality:0 "만주 공화국"
  MAN_republic_neutrality_DEF:0 "만주 공화국"
- MAN_republic_communism:0 대 만주 중화 사회주의 인민국"
+ MAN_republic_communism:0 "대 만주 중화 사회주의 인민국"
  MAN_republic_communism_DEF:0 "대 만주 중화 사회주의 인민국"
  MAN_republic_DEF:0 "만주"
  MAN_republic_ADJ:0 "만주"
