병신같은거 몇 개 수정

--- a/localisation/english/replace/09_kor_focus_l_english.yml
+++ b/localisation/english/replace/09_kor_focus_l_english.yml
@@ -70,7 +70,7 @@
  KOR_MB_army's_manship:0 "사병의 개인인권 보장"
  KOR_MB_restart_attack:0 "실전훈련 시작"
  KOR_MB_rospel_done:0 "한국군 교리 개발"
- KOR_MB_korean_army's_father:0 "한국 국군의 아버지는..."
+ KOR_MB_korean_army's_father:0 "군 처우 개선"
  KOR_MB_lee's_government:0 "이명박 정부 지원"
  KOR_MB_the_last_order:0 "질서 유지를 위한 법률 반포"
  KOR_MB_excuminated:0 "사형제도 임시 부활"
@@ -100,7 +100,7 @@
  KOR_equipment_sangtae:0 "장비의 상태가.."
  KOR_national_navy:0 "해군 홍보"
  KOR_navy_is_1st:0 "해군이 먼저..일까?"
- KOR_korean_navy's_father:0 "한국 해군의 아버지."
+ KOR_korean_navy's_father:0 "바다를 지배하는 태극"
  KOR_airgospel_reform:0 "공군교리 혁신"
  KOR_annex_three_ag:0 "세개의 교리 통합?"
  KOR_f15_yangsan:0 "F15 양산계획"
@@ -232,7 +232,7 @@
  KOR_MB_army's_manship_desc:0 "사병의 개인인권 보장"
  KOR_MB_restart_attack_desc:0 "실전훈련 시작"
  KOR_MB_rospel_done_desc:0 "한국군 교리 개발"
- KOR_MB_korean_army's_father_desc:0 "한국 국군의 아버지는..."
+ KOR_MB_korean_army's_father_desc:0 "대한민국 육군은 더 이상의 노예 취급이 아닐 것입니다. 우리의 육군은 조국 해방, 더 나아가 인류 해방의 선봉장으로 활약할 것입니다!"
  KOR_MB_lee's_government_desc:0 "이명박 정부 지원"
  KOR_MB_the_last_order_desc:0 "질서 유지를 위한 법률 반포"
  KOR_MB_excuminated_desc:0 "아직 법률상으로는 존재하는 사형제도를 현 불안한 체제 속에서 사용을 해야되겠습니다."
@@ -262,11 +262,11 @@
  KOR_equipment_sangtae_desc:0 "장비의 상태가.."
  KOR_national_navy_desc:0 "해군 홍보"
  KOR_navy_is_1st_desc:0 "해군이 먼저..일까?"
- KOR_korean_navy's_father_desc:0 "한국 해군의 아버지."
+ KOR_korean_navy's_father_desc:0 "우리의 해군은 전 세계를 누비며 태극기를 휘날릴 것입니다. 어느 열강들 따위라도 바다 사나이의 앞길을 막을 수 없습니다!"
  KOR_airgospel_reform_desc:0 "공군교리 혁신"
  KOR_annex_three_ag_desc:0 "세개의 교리 통합?"
  KOR_f15_yangsan_desc:0 "F15 양산계획"
- KOR_high_skys_korean_desc:0 "높은 하늘의 한국인"
+ KOR_high_skys_korean_desc:0 "라이트 형제가 비행기를 개발한지 겨우 몇 십년 지나지도 않은 시대의 기술은 스텔스 기술과 음속 비행을 하는 한국 공군에게 상대가 되지 않습니다. 우리는 높은 하늘에서 보라매와 같이 먹이를 노려볼 것입니다!"
  KOR_last_skyeqp_desc:0 "현 시대의 마지막 계획"
  KOR_another_KRAF_desc:0 "공군 내 파벌 금지"
  KOR_nakhasan_desc:0 "낙하산 품질 개혁"
