--- a/localisation/english/replace/09_kor_ideas_l_english.yml
+++ b/localisation/english/replace/09_kor_ideas_l_english.yml
@@ -80,6 +80,10 @@
  KOR_modern_airforce:0 "미래 국군 - 2009년의 대한 공군"
  KOR_09_modern_navy:0 "미래 국군 - 2009년의 대한 해군"
  
+ KOR_super_army:0 "자랑스러운 육군, 승리하는 육군"
+ KOR_super_navy:0 "바다로, 세계로!"
+ KOR_super_airforce:0 "하늘을 지키는 우리 힘을 믿으라"
+ 
  KOR_roh_trait:0 "사람사는 세상"
  KOR_moon_trait:0 "인권 변호사"
  KOR_hong_trait:0 "모래시계 검사"
