--- a/localisation/english/replace/kor_equipment_l_english.yml
+++ b/localisation/english/replace/kor_equipment_l_english.yml
@@ -668,6 +668,7 @@
  m_1980_manpad_equipment:0 "1980년대 맨패드"
  m_1990_manpad_equipment:0 "1990년대 맨패드"
  m_2000_manpad_equipment:0 "2000년대 맨패드"
+ KOR_m_1970_manpad_equipment:0 "레드아이"
  KOR_m_1980_manpad_equipment:0 "휴샘 스팅어"
  KOR_m_1990_manpad_equipment:0 "휴샘 미스트랄"
  KOR_m_2000_manpad_equipment:0 "신궁"
