--- a/localisation/english/replace/09_kor_focus_l_english.yml
+++ b/localisation/english/replace/09_kor_focus_l_english.yml
@@ -166,6 +166,7 @@
  KOR_up_people:0 "깨어나라, 시민들이어!"
  KOR_MB.7.c:0 "고착화되가는 군"
  KOR_anarchy:0 "상상치 못한 루트"
+ KOR_new_eur_contact_plan:0 "새로운 유럽에 접촉"
  sub_mod_kasche:0 "§H`아나키즘 서브모드`§!가 필요합니다."
  
  KOR_MB_northen_allied_desc:0 "더 이상의 남북갈등은 의미가 없습니다. 서로간의 협력을 시도해서 국난을 해쳐나가야 합니다."
