--- a/localisation/english/replace/kor_music_l_english.yml
+++ b/localisation/english/replace/kor_music_l_english.yml
@@ -39,7 +39,7 @@
  letsgo:0 "진격 (let'sgo)"
  scared_war:0 "성스러운 전쟁 (The Sacred War)"
  kat_kor:0 "카츄샤(한국어) (Katyusha)"
- maintheme:0 "WIC ost - Incursion (급습)"
+ maintheme:0 "2009시나리오 테마곡 - 배틀필드 4 메인 테마"
  allies:0 "주제곡 - 연합국 (Main Theme - Allies)"
  koreana:0 "1991시나리오 테마곡 - 손에 손잡고"
  BF4:0 "2009시나리오 테마곡 - 배틀필드 4 메인 테마" 
