--- a/localisation/english/TSK_Country_Info_Screen_l_english.yml
+++ b/localisation/english/TSK_Country_Info_Screen_l_english.yml
@@ -70,20 +70,20 @@
  KOR_CountryInfo_Content_desc.1: "1392년 태조 이성계는 위화도 회군의 결과로 고려 왕조의 문을 닫고 조선을 세웠습니다. 성리학적 질서와 백성들의 교화를 목적으로 한 조선 왕조는 세종, 성종, 영조, 정조 등의 걸출한 왕들을 배출하면서 찬란히 빛났으며, 국왕의 자비 하에서 수 천만 백성들은 그 은덕을 찬양하며 살아갈 것 같았습니다. 허나 그렇지 않았습니다.\n\n개화기를 맞이하여 조선은 쌓인 모든 병폐가 백일하에 들어나면서 모든 개혁의 동력을 잃어버렸습니다. 고종과 흥선대원군, 그리고 개화파 간의 정치적 갈등은 조선 왕국이 근대 국가로 걸어갈 수 있는 모든 길을 제거하였고, 정해진 죽음에서 벗어나고자 국호까지 바꾸며 발버둥친 조선은 1910년 8월 29일 한일병합조약으로 흔적만 남은 채 일본의 일부가 되었습니다.\n\n일본제국이 패망하는 1945년 8월 15일까지 삼천리 강산에 있는 모든 민중들은 언어도, 문화도, 사는 지역조차 다른 이민족에게 지배당하였고, 꿈조차 꾸지 못하며 살아갔습니다."
  
  KOR_CountryInfo_Content.2: "도둑처럼 찾아온 광복"
- KOR_CountryInfo_Content_desc.2: "작성 중" #아무도 상상할 수 없던 방법으로, 마치 도둑과 같이 광복은 조선인들에게 찾아왔습니다. 그것을 주도한 사람은 도쿄 사시는 이왕 전하도 아니었고, 중경 가 있는 임정도 아니었고, 민중을 외치는 조선공산당도 아니었습니다. 오직 미합중국의 압도적인 무력만이 조선민중들에게 광복을 찾아주었습니다.\n\n그러나 기쁨은 오래 가지 않았습니다.
+ KOR_CountryInfo_Content_desc.2: "함석헌의 "해방은 도둑같이 뜻밖에 왔다"와 같이 한반도 삼천리 강산 사람들에게 자유는 예상치 못하게 다가왔습니다. 8월 15일에서 하루 지난 16일, 일제의 모든 감시가 풀린 것이 확실해지자 모두 태극기를 들고 거리로 나와 독립을 소리 높여 불렀습니다. 장및빛 미래만이 앞날에 존재할 것만 같았습니다. 우리 민족끼리 잘 살아볼 것 같았습니다.\n\n절대 아니었습니다. 정세는 어지럽게 돌아갔고, 일본이 떠나 힘의 공백이 찾아온 조선 반도는 38선을 기점으로 소비에트 민정청과 재조선 미국 육군사령부 군정청으로 찢어지게 되었습니다. 1945년부터 1948년까지 장장 3년 동안 이어진 해방 정국은 3천만 조선사람들을 각각 대한민국 국민과 조선민주주의인민공화국 인민으로 갈라놓았습니다. \n\n김구와 같이 많은 이들은 하나의 나라를 만드려고 하였으나, 이들은 각각 빨갱이와 반동으로 몰려 비참하게 생을 마감하였습니다. 독립이 찾아온지 10년도 되지 않아 반도는 이념의 격전장이 되었습니다." #아무도 상상할 수 없던 방법으로, 마치 도둑과 같이 광복은 조선인들에게 찾아왔습니다. 그것을 주도한 사람은 도쿄 사시는 이왕 전하도 아니었고, 중경 가 있는 임정도 아니었고, 민중을 외치는 조선공산당도 아니었습니다. 오직 미합중국의 압도적인 무력만이 조선민중들에게 광복을 찾아주었습니다.\n\n그러나 기쁨은 오래 가지 않았습니다.
  
- KOR_CountryInfo_Content.3: "어둡고도 고된 나날"
- KOR_CountryInfo_Content_desc.3: "작성 중"
+ KOR_CountryInfo_Content.3: "어둡고도 고된 나날들"
+ KOR_CountryInfo_Content_desc.3: "1950년 6월 25일 새벽 4시, 38도선을 넘어서 조선인민군은 남침을 시작하였습니다. 소련과 중공의 지원을 받은 북조선은 보병 병력 뿐이 없는 대한민국 국군을 파죽지세로 돌파하였습니다. 겨우 3일만에 대한민국은 수도 서울을 빼앗겼고, 이승만 대통령은 부산을 임시 수도로 지정하였습니다. 북조선의 맹공 앞에 전선은 압록강까지 밀려, 한국 정부와 민중들까지 망국을 논하게 되었습니다.\n\n미합중국은 중국에 뒤이은 한반도의 적화를 용납할 수 없었습니다. UN군의 이름을 단 1세계는 한국전쟁에 공식적으로 개입하였고, 중공의 개입 등 치열한 격전을 이어가며 한국전쟁을 완전한 적화로 끝내는 것을 막아냈습니다. 한국에서의 전쟁은 1953년 7월 27일 그쳤습니다.\n\n이승만 정부는 폐허가 된 남쪽 반도를 통치하였습니다. 허나 대통령의 자유당 정권은 독재 권력을 향한 야욕으로 인해 나라의 주인이 국민임을 망각하였습니다. 4대 정부통령 선거에서의 부정선거는 들통났고, 4.19 혁명은 자유당을 권좌에서 끌어내렸습니다. \n\n하지만 뒤이은 민주당 내각은 무능하였고, 정부는 억눌린 사회 불만들을 수습할 수 없었습니다. 1961년 5월 16일의 군사정변은 이런 정권을 무력으로 뒤엎고자 일어났습니다."
  
  KOR_CountryInfo_Content.4: "6월이여"
- KOR_CountryInfo_Content_desc.4: "작성 중"
+ KOR_CountryInfo_Content_desc.4: "박정희 정부는 경제발전을 제일의 국시로 삼았습니다. 경제개발 5개년 계획과 새마을 운동은 성공적이었고, 빈곤률은 박정희 정부를 전후해서 4분지 1 수준으로 떨어졌습니다. 하지만 억압적이고 수직적인 군사정부 또한 민중을 탄압하는 것은 매한가지였고, 유신 헌법은 박 대통령이 죽을 때까지 집권할 수 있게 해주었습니다. 반대파들은 생명의 위협을 받으며 망명생활을 하였습니다.\n\n10.26으로 군정은 끝나는 줄 알았으나, 전두환을 위시한 신군부는 서울의 봄, 그리고 광주 민주화 운동을 짓밟으면서 피에 젖은 권좌에 올라 앉았습니다. 하지만 영원하지 않았습니다. 서울대학교 인문대학 84학번 박종철의 죽음과 호헌조치는 1987년 6월의 대한민국을 그 어느 때보다 뜨거운 열정으로 타오르게 하였습니다. 민중들의 힘은 60년에 그랬듯 독재자를 다시 한번 끌어내렸습니다."
  
  KOR_CountryInfo_Content.5: "우리의 상황"
- KOR_CountryInfo_Content_desc.5: "작성 중"
+ KOR_CountryInfo_Content_desc.5: "대한민국은 동아시아에서 화려하게 빛나게 되었습니다. 전쟁으로 한 차례 폐허가 된 국가는 반 백년도 채 안되어서 1인당 소득 1만불을 달성하였고, 왜정에 의해 말살되는게 우려되던 문화는 전 세계로 퍼져나갔습니다. \n\n그러나 모든 상황이 좋은 것은 아닙니다. 사회의 각기 각층에서 삐걱이는 움직임을 보이고 있습니다. 총체적 부의 합을 늘리는 것에 치중하였기에 노동자 개개인의 권리는 보장되지 않고 있으며, 사람을 재화로 사용하는데에 거리낌이 없습니다. 사회 문화는 놀랍게도 보수적이며, 통제와 탄압을 당연하게 여기고 있습니다. \n\n새로운 천년이 다가온지 9년이 넘었습니다. 앞으로의 미래를 써내려가는데 가장 중요한 것은 초기에 무엇을 쌓느냐입니다."
  
  # 102
  KOR_CountryInfo_Content.6: "민주공화국"
- KOR_CountryInfo_Content_desc.6: "작성 중"
+ KOR_CountryInfo_Content_desc.6: "대한민국의 주인은 도쿄 사시는 이왕 전하도 아니고, 평양 사시는 수령 동지도 아니고, 청와대 사시는 대통령 각하도 아닙니다. 헌법 제1조에 명시된 것과 같이 대한민국은 국민이 주인인 민주공화국입니다.\n\n지난 한 세기 동안 이런 국민주권론과 민주주의라는 개념은 그 빛이 바랬었습니다. 정부라는 폭력의 독점자가 행사한 권위와 통제는 국민들에게 자신이 주인이라는 개념을 깨우치기도 전에 목줄을 강제로 채웠습니다. 그러나 저항은 꾸준히 있었습니다. 압제자들을 몰아내기 위한 모든 시도는 의미가 충분히 있었고, 곧 6월 항쟁에 이르러서 총칼로 권좌를 쟁취한 이들을 쫒아냈습니다.\n\n허나 아직도 민주공화국은 불안정합니다. 수구화되는 민주화의 세대들은 자신들이 노래했던 진정한 자유를 추구하기보다는, 자신들이 극도로 혐오했던 통제와 억압을 답습하려 들고 있습니다. 진정한 자유를 쫒는 여정은 어쩌면 아직도 진행되는 중일 것입니다."
   
  KOR_CountryInfo_Content.7: "삼권분립"
  KOR_CountryInfo_Content_desc.7: "작성 중"
