--- a/localisation/english/replace/TSK_parties_l_english.yml
+++ b/localisation/english/replace/TSK_parties_l_english.yml
@@ -3,8 +3,8 @@
  KOR_communism_party_long:0 "통합진보당"
  KOR_democratic_party:0 "한나라당"
  KOR_democratic_party_long:0 "한나라당"
- KOR_fascism_party:0 "대한제국 복권파"
- KOR_fascism_party_long:0 "대한제국 복권파"
+ KOR_fascism_party:0 "한나라당"
+ KOR_fascism_party_long:0 "한나라당"
  KOR_neutrality_party:0 "한나라당"
  KOR_neutrality_party_long:0 "한나라당"
  
